# cybercrime_metrics_lit_review

./: Dockerfile.dev  README.md  config.py  cybercrime_analysis.db  cybercrime_metrics_research.ipynb  docker-compose.dev.yml  pyproject.toml  requirements.in
Dependencies info/: base-env.txt  lock.sh
input_docs/: new_papers.txt  notes_on_sources_1.txt  papers.bib  proposed_indicators_and_sources.txt  undermind-cybercrime-table-export.csv
models/: db_models.py
output_docs/: proposed_indicator_table.csv  proposed_indicator_table_clean.csv
