[tool.poetry]
name = "poetry_start_project_change_this_name"
version = "0.1.0"
description = "This file serves as a record of the packages installed via poetry"
authors = ["Your Name <you@example.com>"]
license = "none"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"