[tool.poetry]
name = "poetry_start_project_change_this_name"
version = "0.1.0"
description = "This file serves as a record of the packages installed via poetry"
authors = ["Your Name <you@example.com>"]
license = "none"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.9"
sqlalchemy = "^2.0.40"
ipykernel = "^6.29.5"
alembic = "^1.15.2"
bibtexparser = "^1.4.3"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"